# na-emailer

./: .gitignore  Dockerfile  README.md  pyproject.toml  start.py
app/: __init__.py  config.py  filtering.py  main.py  models.py  templating.py
app/clients/: __init__.py  base.py  factory.py  yagmail_client.py
templates/: default.html.j2  default.subject.j2  default.txt.j2
