[project]
name = "na-emailer"
version = "0.1.0"
description = "Knative function that turns CloudEvents into email notifications"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "functions-framework>=3.5.0",
  "cloudevents>=1.10.1",
  "jinja2>=3.1.4",
  "yagmail>=0.15.293",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-env>=1.1.3",
  "requests>=2.31.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
